--- a/data-providers/jdbc-data-provider/pom.xml
+++ b/data-providers/jdbc-data-provider/pom.xml
@@ -25,6 +25,12 @@
             <version>1.2.4</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.6.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
