--- a/data-providers/jdbc-data-provider/src/main/resources/jdbc-driver.yml
+++ b/data-providers/jdbc-data-provider/src/main/resources/jdbc-driver.yml
@@ -160,6 +160,7 @@ POSTGRESQL:
   db-type: POSTGRESQL
   name: POSTGRESQL
   driver-class: org.postgresql.Driver
+  adapter-class: datart.data.provider.jdbc.adapters.PostGreDataProviderAdapter
   url-prefix: jdbc:postgresql://
   sql-dialect: datart.data.provider.calcite.dialect.PostgresqlSqlDialectSupport
 
